--- a/gallerie.html
+++ b/gallerie.html
@@ -45,6 +45,69 @@
 <!-- Main Content -->
 <div class="content">
 
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/carousel/image-1.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-2.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-3.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-4.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-5.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-6.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-7.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-8.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-9.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-10.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-11.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-12.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-13.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-14.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/carousel/image-15.jpeg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
 </div>
 
 <!-- Footer -->
