--- a/gallerie.html
+++ b/gallerie.html
@@ -55,46 +55,46 @@
             <div class="carousel-item active">
                 <img src="images/carousel/image-1.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item ">
                 <img src="images/carousel/image-2.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-3.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-4.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-5.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-6.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-7.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-8.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-9.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-10.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-11.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-12.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-13.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-14.jpeg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="images/carousel/image-15.jpeg" class="d-block w-100" alt="...">
             </div>
         </div>
