--- a/preise.html
+++ b/preise.html
@@ -44,24 +44,52 @@
 
 <!-- Main Content -->
 <div class="content">
-
-    <div class="card" style="width: 18rem;">
-        <img src="images/fitness.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Fitness Group-Fitness Ausdauer Sauna Dampfbad Miniclub</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="cards-container">
+        <div class="card">
+            <img src="images/fitness.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Fitness Group-Fitness Ausdauer Sauna Dampfbad Miniclub</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">1x pro Woche - 410.- Fr.</li>
+                <li class="list-group-item">2x pro Woche - 580.- Fr.</li>
+                <li class="list-group-item">unbegrenzt - 700.- Fr.</li>
+                <li class="list-group-item">Schüler, Studenten, Lehrlinge: 10%  Rabatt</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Bestellen</a>
+            </div>
         </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">1x pro Woche - 410.- Fr.</li>
-            <li class="list-group-item">2x pro Woche - 580.- Fr.</li>
-            <li class="list-group-item">unbegrenzt - 700.- Fr.</li>
-            <li class="list-group-item">Schüler, Studenten, Lehrlinge: 10%  Rabatt</li>
-        </ul>
-        <div class="card-body">
-            <a href="#" class="card-link">Bestellen</a>
+
+        <div class="card">
+            <img src="images/fitness.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Solarium</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">6 Minuten - 5.- Fr.</li>
+                <li class="list-group-item">27er Abo - 120.- Fr.</li>
+                <li class="list-group-item">Ergoline 600 Avantgarde Turbo Power</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Bestellen</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/fitness.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Sauna Dampfbad</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Einzel - 15.- Fr.</li>
+                <li class="list-group-item">10 er Abo - 130.- Fr.</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Bestellen</a>
+            </div>
         </div>
     </div>
-
 </div>
 
 <!-- Footer -->
