--- a/preise.html
+++ b/preise.html
@@ -44,6 +44,19 @@
 
 <!-- Main Content -->
 <div class="content">
+    <p>
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Mehr Infos
+        </button>
+    </p>
+    <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+            <p>Preise inklusive Mehrwertsteuer</p>
+            <p>Wir akzeptieren EC - Direkt  Post - Card  Reka - Check</p>
+            <p>Hier erfahren Sie, was Ihre Krankenkasse an ein Fitnessabo bezahlt <a href="https://www.physical.ch/files/gesundheitsfoerderungsbeitraege_2014_d_web.pdf">PDF</a></p>
+        </div>
+    </div>
+
     <div class="cards-container">
         <div class="card">
             <img src="images/fitness.jpg" class="card-img-top" alt="...">
