--- a/gallerie.html
+++ b/gallerie.html
@@ -44,7 +44,7 @@
 
 <!-- Main Content -->
 <div class="content">
-    <h2>So sieht es bei uns aus <span class="badge bg-secondary">Gallerie</span></h2>
+    <h2><i class="bi bi-images"></i> So sieht es bei uns aus <span class="badge bg-secondary">Gallerie</span></h2>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
