--- a/oeffnungszeiten.html
+++ b/oeffnungszeiten.html
@@ -45,6 +45,91 @@
 <!-- Main Content -->
 <div class="content">
 
+            <p>
+                <strong>
+                    <span style="color: #ff0000;">Öffnungszeiten</span>
+                </strong>
+                <br>
+            </p>
+            <p>
+                <strong>Montag - Freitag</strong>
+                <br>7:30-22:00
+            </p>
+            <p>
+                <span>
+                    <strong>Samstag &amp; Sonntag</strong>
+                    <br>
+                </span>
+                8:00-18:00
+            </p>
+
+            <p>
+                <strong>
+                    <span style="color: #ff0000;">Öffnungszeiten an Feiertagen</span>
+                </strong>
+            </p>
+
+            <table class="opening-hours" cellspacing="1" cellpadding="1" border="0">
+                <tbody>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Karfreitag</td>
+                    <td style="width: 103px; border-color: #ffffff;">8:00-18:00</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Ostersonntag</td>
+                    <td style="width: 103px; border-color: #ffffff;">geschlossen</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Ostermontag</td>
+                    <td style="width: 103px; border-color: #ffffff;">8:00-18:00</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Auffahrt</td>
+                    <td style="width: 103px; border-color: #ffffff;">8:00-18:00</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Pfingsten</td>
+                    <td style="width: 103px; border-color: #ffffff;">geschlossen</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Pfingstmontag</td>
+                    <td style="width: 103px; border-color: #ffffff;">8:00-18:00</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Zofinger Kinderfest 1. Freitag Juli</td>
+                    <td style="width: 103px; border-color: #ffffff;">geschlossen</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Nationalfeiertag 1. August</td>
+                    <td style="width: 103px; border-color: #ffffff;">geschlossen</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Heiliger Abend 24.12.</td>
+                    <td style="width: 103px; border-color: #ffffff;">geschlossen</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Weihnachten 25.12.</td>
+                    <td style="width: 103px; border-color: #ffffff;">geschlossen</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Stephanstag 26.12.</td>
+                    <td style="width: 103px; border-color: #ffffff;">8:00-18:00</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Silvester 31.12.</td>
+                    <td style="width: 103px; border-color: #ffffff;">geschlossen</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Neujahr 1.1.</td>
+                    <td style="width: 103px; border-color: #ffffff;">geschlossen</td>
+                </tr>
+                <tr>
+                    <td style="width: 243px; border-color: #ffffff;">Berchtoldstag 2.1.</td>
+                    <td style="width: 103px; border-color: #ffffff;">8:00-18:00</td>
+                </tr>
+                </tbody>
+            </table>
+
 </div>
 
 <!-- Footer -->
