--- a/oeffnungszeiten.html
+++ b/oeffnungszeiten.html
@@ -47,7 +47,7 @@
 
             <p>
                 <strong>
-                    <span style="color: #ff0000;">Öffnungszeiten</span>
+                    <span style="color: #ff0000;"><i class="bi bi-alarm"></i> Öffnungszeiten</span>
                 </strong>
                 <br>
             </p>
@@ -65,7 +65,7 @@
 
             <p>
                 <strong>
-                    <span style="color: #ff0000;">Öffnungszeiten an Feiertagen</span>
+                    <span style="color: #ff0000;"><i class="bi bi-alarm"></i> Öffnungszeiten an Feiertagen</span>
                 </strong>
             </p>
 
