--- a/kontakt.html
+++ b/kontakt.html
@@ -44,7 +44,11 @@
 
 <!-- Main Content -->
 <div class="content">
-
+    <p><span><strong><span style="color: #ff0000;">Kontakt</span></strong></span></p>
+    <p><span>Physical Fitness AG<br>Untere Grabenstrasse 42<br>4800 Zofingen<br></span><br><p style="margin-bottom: 0px;"><i class="bi bi-telephone"></i> 062 752 20 52</p><p style="margin-bottom: 0px;">
+    <i class="bi bi-envelope"></i>
+    <a href="mailto:fitness@physical.ch" rel="alternate">fitness@physical.ch</a>
+</p> <p><i class="bi bi-facebook"></i> <a href="https://www.facebook.com/groups/89741023563/" rel="alternate"><span> Facebook</span></a></p></p>
 </div>
 
 <!-- Footer -->
