--- a/kontakt.html
+++ b/kontakt.html
@@ -49,6 +49,8 @@
     <i class="bi bi-envelope"></i>
     <a href="mailto:fitness@physical.ch" rel="alternate">fitness@physical.ch</a>
 </p> <p><i class="bi bi-facebook"></i> <a href="https://www.facebook.com/groups/89741023563/" rel="alternate"><span> Facebook</span></a></p></p>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2706.441153627177!2d7.944122951542528!3d47.286177979062394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479025847e41f29d%3A0x646181a57016e390!2sPhysical-Fitness!5e0!3m2!1sde!2sch!4v1636616220336!5m2!1sde!2sch" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
 
 <!-- Footer -->
