--- a/angebot.html
+++ b/angebot.html
@@ -44,7 +44,10 @@
 
 <!-- Main Content -->
 <div class="content">
+    <p><strong><span style="color: #ff0000;">Das Physical Fitness bietet...</span></strong></p>
+    <p>Kompetente Instruktion der drei Komponenten Kraft ,Beweglichkeit, Ausdauer.<br> Unabhängig von Geschlecht und Alter können Trainingsbedürfnisse gesundheitsorientiert befriedigt werden.<br> Trainer mit eidg. Fachausweis.<br>Sportmedizinische Beratung<br>Der Gerätepark mit Life Fitness, Hammer Strength, Natural Strength, Galaxy.<br> 47 pulsgesteuerte Ausdauergeräte.<br> Rip 60 (TRX)<br><span><span><span class="ueberschrift1
 
+">fle-xx das Rücken Training</span></span></span><br> Grosses Gymnastikangebot in 240 m2 Raum.<br> 60 m2 Spinning-Raum mit starker Lüftung.<br> Boxraum mit div. Boxutensilien.<br>38 Group-Fitness Lektionen pro Woche<br> Massageraum.<br> Miniclub Öffnungszeiten wie Studio, Betreuung Montag-Freitag 9.00-11.00.<br> Bar-Bistro mit Sport-Shop.<br> Sauna, Dampfbad, Ruheraum, Solarium.<br>Free Wifi Internet.<br> <br> Wir sind<strong> Qualitop - geprüft&nbsp;</strong> und somit <strong>Gesundheitspartner</strong> der <strong>Krankenkasse.</strong><br> Dadurch erhalten Sie für ein Fitnessabo von uns den Präventionsbonus Ihrer Krankenkasse.</p>
 </div>
 
 <!-- Footer -->
