--- a/index.html
+++ b/index.html
@@ -63,6 +63,29 @@
         </div>
     </div>
 
+    <div class="toast-container">
+
+        <div class="toast show">
+            <div class="toast-header">
+                Black Friday!
+                <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+            </div>
+            <div class="toast-body">
+                Werfen Sie einen Blick auf unser Angebot!
+            </div>
+        </div>
+
+        <div class="toast show">
+            <div class="toast-header">
+                Newsletter
+                <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+            </div>
+            <div class="toast-body">
+                Abonnieren Sie unseren Newsletter um immer auf dem Laufen zu bleiben.
+            </div>
+        </div>
+
+    </div>
 
 </div>
 
