--- a/index.html
+++ b/index.html
@@ -93,17 +93,14 @@
 
                         <h1 class="text-huge-title">
                             I am Orkun, <br>
-                            a digital designer <br>
-                            & frontend <br> 
-                            developer based <br>
-                            in Somewhere.
+                            a Web application developer <br>
+                            based in Switzerland.
                         </h1>
                     </div>
 
                     <ul class="intro-social">
-                        <li><a href="#0">Behance</a></li>
                         <li><a href="#0">Twitter</a></li>
-                        <li><a href="#0">Dribbble</a></li>
+                        <li><a href="#0">Github</a></li>
                         <li><a href="#0">Instagram</a></li>
                     </ul>
 
@@ -154,12 +151,12 @@
                         <h2 class="text-pretitle" data-animate-el>Expertise</h2>
 
                         <ul class="skills-list h1" data-animate-el>
-                            <li>Visual Design</li>
-                            <li>Branding Identity</li>
-                            <li>UI Design</li>
-                            <li>Product Design</li>
-                            <li>Prototyping</li>
-                            <li>Illustration</li>
+                            <li>PHP</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JS</li>
+                            <li>ProcessWire</li>
+                            <li>Webdev</li>
                         </ul>
 
                     </div>
